--- a/1.2_The_Foundation/index.html
+++ b/1.2_The_Foundation/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--Richard Parrott-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>
-        A tech talks to his son.
+        A tech talks to his son. <!--This is an inline comment--> 
     </h1>
     <p>
         <img id="clouds.jpg" src="Z:\Dads_School_Work\CSC102\1.2_The_Foundation\clouds.jpg" > 
